--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,123 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PeerAssessment1"
+author: "Yina Wei"
+date: "September 20, 2015"
+output: html_document
 ---
 
 
-## Loading and preprocessing the data
+**Loading and preprocessing the data**
+
+1. Load the data with read.cvs()
+
+```{r,echo=TRUE}
+data<-read.csv(file="activity.csv",header=TRUE,sep=",")
+```
+
+2. Process/transform the data into a format suitable for analysis
+```{r,echo=TRUE}
+sdata<-data[!is.na(data$steps),]
+```
+**What is the mean total number of steps taken per day?**
+
+1. Calculate the total number of steps taken per day
+
+```{r,echo=TRUE}
+library(plyr)
+perday<-ddply(sdata,.(date),summarize,totalstep=sum(steps))
+head(perday)
+```
+2. Make a histogram of the total number of steps taken each day
+
+```{r,echo=TRUE}
+hist(perday$totalstep)
+```
+
+3. Calculate and report the **mean** and **median** of the total number of steps taken per day
+
+```{r,echo=TRUE}
+meanstep<-mean(perday$totalstep)
+meanstep
+medianstep<-median(perday$totalstep)
+medianstep
+```
+
+**What is the average daily activity pattern?**
+
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+```{r,echo=TRUE}
+perinterval<-ddply(sdata,.(interval),summarize,avestep=mean(steps))
+plot(perinterval$interval,perinterval$avestep,type="l")
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r,echo=TRUE}
+indx<-which(perinterval$avestep==max(perinterval$avestep))
+maxinterval<-perinterval$interval[indx]
+maxinterval
+```
+
+**Imputing missing values**
+
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+```{r,echo=TRUE}
+missingData<-data[is.na(data$steps),]
+missingRows<-dim(missingData)[1]
+```
+
+Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+Here, we filling the NA with  the mean for that 5-minute interval.
+Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r,echo=TRUE}
+newdata=data
+newdata[is.na(newdata$steps),]$steps=perinterval$avestep
+head(newdata)
+```
+
+Make a histogram of the total number of steps taken each day and Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r,echo=TRUE}
+newperday<-ddply(newdata,.(date),summarize,totalstep=sum(steps))
+newmeanstep<-mean(newperday$totalstep)
+newmeanstep
+newmedianstep<-median(newperday$totalstep)
+newmedianstep
+```
+
+The mean is the same as estimated from the first part. The median is different, which is the same as the mean. This is effected by imputing missing data. 
+
+**Are there differences in activity patterns between weekdays and weekends?**
+
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+
+Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
 
 
 
-## What is mean total number of steps taken per day?
+```{r,echo=TRUE}
+Wday<-chron::is.weekend(newdata$date)
+Wday<-factor(Wday,levels=c(TRUE,FALSE),labels=c('weekend','weekday'))
+newdata<-mutate(newdata,Wday=Wday)
+head(newdata)
+```
+
+Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using **simulated data:**
+
+```{r,echo=TRUE}
+weekdayinterval<-ddply(newdata[newdata$Wday=='weekday',],.(interval),summarize,avestep=mean(steps))
+weekendinterval<-ddply(newdata[newdata$Wday=='weekend',],.(interval),summarize,avestep=mean(steps))
+weekdayinterval<-mutate(weekdayinterval,Wday='weekday')
+weekendinterval<-mutate(weekendinterval,Wday='weekend')
+weekdata<-rbind(weekendinterval,weekdayinterval)
+library(lattice)
+xyplot(avestep~interval|Wday,data=weekdata,layout=c(1,2),type="l")
+```
 
 
 
-## What is the average daily activity pattern?
 
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
